# libraw-cffi

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  coverage.yml  packaging.yml
benchmarks/: radiohead.py
examples/: save_jpeg_using_pil.py
libraw_cffi/: __init__.py  _api.py  _build.py
libraw_cffi/tests/: __init__.py  test_api.py  test_overview.py  test_samples.py
