[metadata]
name = libraw_cffi
url = https://github.com/Julian/libraw-cffi
project_urls =
    Source = https://github.com/Julian/libraw-cffi
    Issues = https://github.com/Julian/libraw-cffi/issues/
description = CFFI bindings for LibRaw
long_description = file: README.rst
author = Julian Berman
author_email = Julian+libraw_cffi@GrayVines.com
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
setup_requires = setuptools_scm
install_requires =
    importlib_metadata; python_version < '3.8'

[flake8]
exclude = libraw_cffi/__init__.py

[bdist_wheel]
universal = 1
